# gnu_linux_2024

./: README.md
01_TerminalProject/: Makefile  Show.c
02_Multifile/: Makefile  prog.c
03_Text/: randomize.sh
04_Debugging/: Makefile  first_true  gdb_script_first  gdb_script_second  range.c  second_true
05_Regexps/: Makefile  esub.c
06_Tracing/: Makefile  move.c  protect.c
07_Environmental/: Makefile.am  configure.ac
07_Environmental/src/: rhasher.c
08_I18n/: Makefile.am  configure.ac
08_I18n/po/: ru.po
08_I18n/src/: guesser.c  guesser.c~
08_I18n/src/.deps/: guesser.Po
09_PatchDiff/: Makefile  first.patch  lab.c  second.patch  third.patch
10_LibTesting/: configure.ac
10_LibTesting/src/: Makefile.am  buf.h
10_LibTesting/tests/: Makefile.am  upstream.ts
11_Documenting/: Makefile.am  configure.ac
11_Documenting/src/: Makefile.am  generate_roman.py  guesser.c  libguesser.c  libguesser.h
12_InstallPackaging/: Doxyfile.in  Makefile.am  configure.ac
12_InstallPackaging/po/: POTFILES.in  ru.po
12_InstallPackaging/src/: Makefile  Makefile.am  generate_dictionary.py  wordle.c  wordle.h
12_InstallPackaging/tests/: Makefile.am  upstream.ts
